# Semantic-Cache

./: .gitignore  Dockerfile  HANDOFF.md  LICENSE  Makefile  PHASE_1_COMPLETE.md  PROJECT_CONTEXT.md  README.md  config_test_output.txt  docker-compose.yml  pyproject.toml  requirements.txt  run_api.py  test_cache_api.py  test_parser.py
.github/workflows/: tests.yml
config/: default.yaml
docs/: ARCHITECTURE_COMPARISON.md  CHECKPOINT_PHASE2.md  COMPLETE_IMPLEMENTATION_PLAN.md  DECISIONS_LOG.md  DOCUMENTATION_SUMMARY.md  EXECUTION_CONTEXT.md  FEATURES.md  FUTURE_IMPROVEMENTS.md  INDEX.md  PHASE_1_VERIFICATION.md  PHASE_2_QUICK_START.md  QUERY_FLOW_EXPLAINED.md  SESSION_2026_03_21.md
docs/architecture/: ARCHITECTURE.md
docs/guides/: INDEX.md  PHASE_1_1_FOUNDATION_USAGE.md  PHASE_1_2_EMBEDDING_SERVICE_USAGE.md  PHASE_1_3_SIMILARITY_SEARCH_USAGE.md  PHASE_1_4_L1_CACHE_USAGE.md  PHASE_1_5_L2_CACHE_USAGE.md  PHASE_1_6_DEDUP_USAGE.md  PHASE_1_7_POLICIES_USAGE.md  PHASE_1_8_PERFORMANCE_USAGE.md  PHASE_1_9_MULTITENANCY_USAGE.md  QUICK_REFERENCE.md  SETUP.md  USAGE_GUIDE.md
docs/phase_2/: API_DESIGN.md  IMPLEMENTATION_GUIDE.md  README.md  STATUS_REPORT.md
frontend-services/dashboard/: package-lock.json  package.json
monitoring/prometheus/: prometheus.yml
src/: __init__.py
src/api/: __init__.py  config.py  main.py  schemas.py
src/cache/: __init__.py  advanced_policies.py  base.py  cache_manager.py  context.py  index_manager.py  l1_cache.py  l2_cache.py  l3_cache.py  multi_tenancy.py  performance_opt.py  policies.py  query_dedup.py  redis_config.py  streaming.py
src/core/: __init__.py  circuit_breaker.py  config.py  database.py  exceptions.py  models.py  schemas.py
src/embedding/: __init__.py  base.py  providers.py  service.py
src/ml/: __init__.py  query_parser.py
src/monitoring/: analytics.py
src/similarity/: base.py  (+3 more)
tests/: test_multi_intent.py
(+29 files in other folders)
